--- a/src/components/Scoreboard/Scoreboard.css
+++ b/src/components/Scoreboard/Scoreboard.css
@@ -2,7 +2,21 @@
     max-width: 100%;
 }
 
+table{
+    height: 30%;
+}
+
+.table-responsive{
+    overflow-x: unset !important;
+}
+
 td{
     min-width: 100px;
     overflow: auto;
+}
+
+.table-header-sticky{
+    position:sticky;
+    top: 0;
+    z-index: 1;
 }
